k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
  name: ensembl-help-docs-ingress
spec:
  rules:
  - host: internal-2020.ensembl.org
    http:
      paths:
      - backend:
          serviceName: ensembl-help-and-docs-svc
          servicePort: 8000
        path: /api/docs($|/)(.*)
